--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# CMAKE
+build
 CMakeLists.txt.user
 CMakeCache.txt
 CMakeFiles
@@ -10,3 +12,12 @@ compile_commands.json
 CTestTestfile.cmake
 _deps
 CMakeUserPresets.json
+
+# C
+bin
+lib
+*.o
+*.exe
+
+# clangd
+.cache
