QRcode now supports V2, and can add alignment patterns.
A lookup table to obtain the data and error correction codeword sizes
has been implemented. The generator can now place a single alignment
pattern (V2). Other versions should easily be supported by added the
points to the switch for alignment patterns. Support for later versions
will still need the addition of the version block (V7 and up) and
splitting the data amongst blocks.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,7 @@ add_library(bch STATIC src/bch.c)
 target_link_libraries(bch m)
 
 add_library(QRcode STATIC src/QRcode.c src/QR_codewords.c src/codeword_lookup.c)
-target_link_libraries(QRcode bch reed_solomon)
+target_link_libraries(QRcode image bch reed_solomon)
 
 # ===============Main executable========================
 add_executable(QRCode src/main.c)
