Updated to Version 1.1.0.
Added support for foreground and background color changing.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 
-project(QRCode VERSION 1.0.1 LANGUAGES C)
+project(QRCode VERSION 1.1.0 LANGUAGES C)
 
 set(CMAKE_C_FLAGS "-Wall")
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
@@ -8,6 +8,8 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
 
 include_directories(include)
+
+configure_file(include/version.h.in ${CMAKE_SOURCE_DIR}/include/version.h)
 
 # Find libraries
 find_package(PNG MODULE)
