Logo can now be embedded into the QR code.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,7 @@ endif()
 
 # =================Libraries============================
 add_library(image STATIC src/image.c src/image_export.c src/image_import.c)
-target_link_libraries(image ${PNG_LIBRARIES})
+target_link_libraries(image ${PNG_LIBRARIES} m)
 
 add_library(reed_solomon STATIC src/reed_solomon.c)
 
