--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,9 +19,16 @@ else()
 	message(FATAL_ERROR "libpng not found")
 endif()
 
+find_package(JPEG MODULE)
+if(JPEG_FOUND)
+	include_directories(${JPEG_INCLUDE_DIRS})
+else()
+	message(FATAL_ERROR "libjpeg not found")
+endif()
+
 # =================Libraries============================
 add_library(image STATIC src/image.c src/image_export.c src/image_import.c)
-target_link_libraries(image ${PNG_LIBRARIES} m)
+target_link_libraries(image ${PNG_LIBRARIES} ${JPEG_LIBRARIES} m)
 
 add_library(reed_solomon STATIC src/reed_solomon.c)
 
